--- a/css/style.css
+++ b/css/style.css
@@ -65,8 +65,6 @@ h2 {
     text-align: center;
     position: relative;
     white-space: nowrap;
-    width: 1293px;
-    margin: 33 auto;
 }
 
 span.shadow {
