--- a/css/why_we.css
+++ b/css/why_we.css
@@ -29,5 +29,5 @@
 }
 
 #why_we .shadow {
-    left: -153px;
+    left: 152px;
 }
